Fix green dot cutoff.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 @media screen and (min-width: 1250px) {
 	body {
 		height: 100vh;
+		overflow: hidden;
 	}
 }
 
